Update lists at 20250707-1801

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -21,6 +21,9 @@ allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
+allow 104.167.242.116;
+allow 104.167.242.117;
+allow 104.167.242.118;
 allow 104.192.3.74;
 allow 104.219.236.100;
 allow 104.244.72.115;
@@ -135,7 +138,6 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 131.72.79.38;
-allow 13.211.124.13;
 allow 135.125.239.70;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -253,6 +255,7 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -534,7 +537,7 @@ allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
-allow 198.167.206.173;
+allow 198.167.206.179;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -906,6 +909,7 @@ allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
+allow 2602:fccf:310:1::c;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:a00:101:4:216:3eff:fe2f:1c84;
 allow 2604:a00:101:4:216:3eff:fe2f:20c3;
@@ -1116,6 +1120,7 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1221,6 +1226,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1608,6 +1614,7 @@ allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
 allow 46.165.243.36;
+allow 46.17.104.189;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1755,6 +1762,7 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 87.120.93.182;
 allow 88.151.194.24;
 allow 88.80.20.86;
@@ -1803,7 +1811,6 @@ allow 91.227.77.209;
 allow 91.227.77.226;
 allow 91.227.77.229;
 allow 91.227.77.237;
-allow 91.227.77.25;
 allow 91.227.77.31;
 allow 91.227.77.36;
 allow 91.227.77.44;
@@ -1845,6 +1852,7 @@ allow 94.72.104.135;
 allow 94.74.164.89;
 allow 95.128.43.164;
 allow 95.143.193.125;
+allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 95.216.107.148;
