--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -136,6 +136,7 @@ deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
+deny 2602:fccf:310:1::c;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:a00:101:4:216:3eff:fe2f:1c84;
 deny 2604:a00:101:4:216:3eff:fe2f:20c3;
@@ -345,6 +346,7 @@ deny 2803:cd80:2000:10::db8f:5f60;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -450,6 +452,7 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
+deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
