Update lists at 20250707-2101

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 100.42.28.67;
 allow 100.42.28.68;
 allow 100.42.28.69;
 allow 100.42.28.70;
-allow 101.99.76.22;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -389,7 +388,6 @@ allow 185.246.188.117;
 allow 185.246.188.149;
 allow 185.246.188.73;
 allow 185.246.188.74;
-allow 185.246.189.156;
 allow 185.246.189.99;
 allow 185.246.84.179;
 allow 185.247.184.105;
@@ -418,7 +416,6 @@ allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
-allow 185.7.78.60;
 allow 185.82.219.109;
 allow 188.214.104.21;
 allow 188.239.191.25;
@@ -1146,7 +1143,6 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:4780:2d:ea47::1;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1464,6 +1460,7 @@ allow 2a12:a800:9:1:193:26:115:140;
 allow 2a12:a800:9:1:193:26:115:212;
 allow 2a12:a800:9:1:193:26:115:43;
 allow 2a12:a800:9:1:193:26:115:61;
+allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:de40:21:1be4::;
 allow 2c0f:6c0:0:2::6983;
@@ -1581,6 +1578,7 @@ allow 45.84.107.55;
 allow 45.84.107.74;
 allow 45.84.107.76;
 allow 45.84.107.97;
+allow 45.88.186.89;
 allow 45.88.186.92;
 allow 45.90.185.100;
 allow 45.90.185.101;
@@ -1607,14 +1605,12 @@ allow 45.9.148.50;
 allow 45.9.156.101;
 allow 45.9.168.18;
 allow 45.9.168.192;
-allow 45.9.168.47;
 allow 45.94.31.68;
 allow 45.95.169.104;
 allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
 allow 46.165.243.36;
-allow 46.17.104.189;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1622,7 +1618,6 @@ allow 46.250.243.29;
 allow 46.30.188.218;
 allow 46.38.243.210;
 allow 46.8.43.110;
-allow 50.7.40.39;
 allow 5.101.82.22;
 allow 5.104.84.183;
 allow 5.104.86.6;
@@ -1698,7 +1693,6 @@ allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
-allow 79.133.57.64;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
@@ -1718,7 +1712,6 @@ allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.86;
 allow 82.221.139.190;
-allow 82.29.153.76;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
@@ -1821,6 +1814,7 @@ allow 91.227.77.62;
 allow 91.227.77.97;
 allow 91.92.109.126;
 allow 91.92.109.43;
+allow 92.113.144.149;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.113.25.239;
