--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -183,7 +183,9 @@ set_real_ip_from 165.154.59.197;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 171.25.193.131;
+set_real_ip_from 171.25.193.20;
 set_real_ip_from 171.25.193.234;
+set_real_ip_from 171.25.193.235;
 set_real_ip_from 171.25.193.25;
 set_real_ip_from 171.25.193.77;
 set_real_ip_from 171.25.193.78;
@@ -255,6 +257,7 @@ set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.104.120.10;
 set_real_ip_from 185.104.120.30;
 set_real_ip_from 185.104.120.40;
+set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.107.57.64;
 set_real_ip_from 185.107.57.65;
 set_real_ip_from 185.107.57.66;
@@ -292,7 +295,6 @@ set_real_ip_from 185.183.159.40;
 set_real_ip_from 185.183.192.147;
 set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.193.52.180;
-set_real_ip_from 185.195.236.55;
 set_real_ip_from 185.195.71.244;
 set_real_ip_from 185.207.107.130;
 set_real_ip_from 185.207.107.216;
@@ -581,7 +583,9 @@ set_real_ip_from 2001:620:20d0::23;
 set_real_ip_from 2001:620:20d0::24;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
+set_real_ip_from 2001:67c:289c::20;
 set_real_ip_from 2001:67c:289c:2::234;
+set_real_ip_from 2001:67c:289c:2::235;
 set_real_ip_from 2001:67c:289c::25;
 set_real_ip_from 2001:67c:289c:4::131;
 set_real_ip_from 2001:67c:289c:4::77;
@@ -1189,6 +1193,7 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1231,7 +1236,6 @@ set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
-set_real_ip_from 2a09:b280:fe01:61::a;
 set_real_ip_from 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
@@ -1363,8 +1367,6 @@ set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
-set_real_ip_from 2a0e:bfc0:0:14::24a8;
-set_real_ip_from 2a0e:bfc0:0:2::8a62;
 set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc2:0:2c::1;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
@@ -1463,7 +1465,6 @@ set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
@@ -1487,6 +1488,7 @@ set_real_ip_from 38.135.24.32;
 set_real_ip_from 38.135.24.33;
 set_real_ip_from 38.135.24.72;
 set_real_ip_from 38.135.25.2;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1602,8 +1604,6 @@ set_real_ip_from 45.9.168.18;
 set_real_ip_from 45.9.168.192;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.104;
-set_real_ip_from 45.95.169.109;
-set_real_ip_from 45.95.169.110;
 set_real_ip_from 45.95.169.252;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.23.109.25;
@@ -1626,6 +1626,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1785,7 +1786,6 @@ set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.221.190.183;
 set_real_ip_from 91.227.77.107;
-set_real_ip_from 91.227.77.108;
 set_real_ip_from 91.227.77.119;
 set_real_ip_from 91.227.77.125;
 set_real_ip_from 91.227.77.139;
