--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -183,7 +183,9 @@ allow 165.154.59.197;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 171.25.193.131;
+allow 171.25.193.20;
 allow 171.25.193.234;
+allow 171.25.193.235;
 allow 171.25.193.25;
 allow 171.25.193.77;
 allow 171.25.193.78;
@@ -255,6 +257,7 @@ allow 185.10.16.41;
 allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
+allow 185.106.102.102;
 allow 185.107.57.64;
 allow 185.107.57.65;
 allow 185.107.57.66;
@@ -292,7 +295,6 @@ allow 185.183.159.40;
 allow 185.183.192.147;
 allow 185.191.204.254;
 allow 185.193.52.180;
-allow 185.195.236.55;
 allow 185.195.71.244;
 allow 185.207.107.130;
 allow 185.207.107.216;
@@ -581,7 +583,9 @@ allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
+allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
+allow 2001:67c:289c:2::235;
 allow 2001:67c:289c::25;
 allow 2001:67c:289c:4::131;
 allow 2001:67c:289c:4::77;
@@ -1189,6 +1193,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1231,7 +1236,6 @@ allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
-allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:f4c0:16c:10::1;
@@ -1363,8 +1367,6 @@ allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
-allow 2a0e:bfc0:0:14::24a8;
-allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
@@ -1463,7 +1465,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1487,6 +1488,7 @@ allow 38.135.24.32;
 allow 38.135.24.33;
 allow 38.135.24.72;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1602,8 +1604,6 @@ allow 45.9.168.18;
 allow 45.9.168.192;
 allow 45.94.31.68;
 allow 45.95.169.104;
-allow 45.95.169.109;
-allow 45.95.169.110;
 allow 45.95.169.252;
 allow 46.165.243.36;
 allow 46.23.109.25;
@@ -1626,6 +1626,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1785,7 +1786,6 @@ allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.221.190.183;
 allow 91.227.77.107;
-allow 91.227.77.108;
 allow 91.227.77.119;
 allow 91.227.77.125;
 allow 91.227.77.139;
