--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -23,7 +23,9 @@ allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
+allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
+allow 2001:67c:289c:2::235;
 allow 2001:67c:289c::25;
 allow 2001:67c:289c:4::131;
 allow 2001:67c:289c:4::77;
@@ -421,6 +423,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -463,7 +466,6 @@ allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
-allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:40:91b:7425:2eff:fec8:5578;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:f4c0:16c:10::1;
@@ -595,8 +597,6 @@ allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
-allow 2a0e:bfc0:0:14::24a8;
-allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
