Update lists at 20250708-0601

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1367,6 +1367,8 @@ allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
+allow 2a0e:bfc0:0:14::24a8;
+allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
@@ -1540,7 +1542,6 @@ allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.145.93.133;
 allow 45.148.10.111;
-allow 45.153.34.246;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1604,6 +1605,8 @@ allow 45.9.168.18;
 allow 45.9.168.192;
 allow 45.94.31.68;
 allow 45.95.169.104;
+allow 45.95.169.109;
+allow 45.95.169.110;
 allow 45.95.169.252;
 allow 46.165.243.36;
 allow 46.23.109.25;
