--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1367,6 +1367,8 @@ deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
+deny 2a0e:bfc0:0:14::24a8;
+deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc2:0:2c::1;
 deny 2a0e:bfc7:0:3::2d83;
@@ -1540,7 +1542,6 @@ deny 45.141.215.95;
 deny 45.141.215.97;
 deny 45.145.93.133;
 deny 45.148.10.111;
-deny 45.153.34.246;
 deny 45.61.185.172;
 deny 45.61.186.203;
 deny 45.61.187.200;
@@ -1604,6 +1605,8 @@ deny 45.9.168.18;
 deny 45.9.168.192;
 deny 45.94.31.68;
 deny 45.95.169.104;
+deny 45.95.169.109;
+deny 45.95.169.110;
 deny 45.95.169.252;
 deny 46.165.243.36;
 deny 46.23.109.25;
