--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -597,6 +597,8 @@ deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
+deny 2a0e:bfc0:0:14::24a8;
+deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc2:0:2c::1;
 deny 2a0e:bfc7:0:3::2d83;
