--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1367,6 +1367,8 @@ set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
+set_real_ip_from 2a0e:bfc0:0:14::24a8;
+set_real_ip_from 2a0e:bfc0:0:2::8a62;
 set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc2:0:2c::1;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
@@ -1540,7 +1542,6 @@ set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.148.10.111;
-set_real_ip_from 45.153.34.246;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.187.200;
@@ -1604,6 +1605,8 @@ set_real_ip_from 45.9.168.18;
 set_real_ip_from 45.9.168.192;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.104;
+set_real_ip_from 45.95.169.109;
+set_real_ip_from 45.95.169.110;
 set_real_ip_from 45.95.169.252;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.23.109.25;
