--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -105,7 +105,6 @@ allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
-allow 2400:8902::f03c:95ff:fe1e:6065;
 allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
 allow 2400:d320:2202:5765::1;
@@ -400,6 +399,7 @@ allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:4000:6:e170:747a:eaff:fe66:37c7;
 allow 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
