Update lists at 20250708-2101

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -324,6 +324,66 @@ allow 185.220.101.107;
 allow 185.220.101.108;
 allow 185.220.101.109;
 allow 185.220.101.110;
+allow 185.220.101.129;
+allow 185.220.101.130;
+allow 185.220.101.131;
+allow 185.220.101.132;
+allow 185.220.101.133;
+allow 185.220.101.134;
+allow 185.220.101.135;
+allow 185.220.101.136;
+allow 185.220.101.137;
+allow 185.220.101.138;
+allow 185.220.101.139;
+allow 185.220.101.140;
+allow 185.220.101.141;
+allow 185.220.101.142;
+allow 185.220.101.143;
+allow 185.220.101.144;
+allow 185.220.101.145;
+allow 185.220.101.146;
+allow 185.220.101.147;
+allow 185.220.101.148;
+allow 185.220.101.149;
+allow 185.220.101.150;
+allow 185.220.101.151;
+allow 185.220.101.152;
+allow 185.220.101.153;
+allow 185.220.101.154;
+allow 185.220.101.155;
+allow 185.220.101.156;
+allow 185.220.101.157;
+allow 185.220.101.158;
+allow 185.220.101.160;
+allow 185.220.101.161;
+allow 185.220.101.162;
+allow 185.220.101.163;
+allow 185.220.101.164;
+allow 185.220.101.165;
+allow 185.220.101.166;
+allow 185.220.101.167;
+allow 185.220.101.168;
+allow 185.220.101.169;
+allow 185.220.101.170;
+allow 185.220.101.171;
+allow 185.220.101.172;
+allow 185.220.101.173;
+allow 185.220.101.174;
+allow 185.220.101.175;
+allow 185.220.101.176;
+allow 185.220.101.178;
+allow 185.220.101.179;
+allow 185.220.101.180;
+allow 185.220.101.182;
+allow 185.220.101.183;
+allow 185.220.101.184;
+allow 185.220.101.185;
+allow 185.220.101.186;
+allow 185.220.101.187;
+allow 185.220.101.188;
+allow 185.220.101.189;
+allow 185.220.101.190;
+allow 185.220.101.191;
 allow 185.220.101.32;
 allow 185.220.101.33;
 allow 185.220.101.34;
@@ -1250,6 +1310,64 @@ allow 2a0b:f4c0:16c:6::1;
 allow 2a0b:f4c0:16c:7::1;
 allow 2a0b:f4c0:16c:8::1;
 allow 2a0b:f4c0:16c:9::1;
+allow 2a0b:f4c2:1::129;
+allow 2a0b:f4c2:1::130;
+allow 2a0b:f4c2:1::132;
+allow 2a0b:f4c2:1::133;
+allow 2a0b:f4c2:1::134;
+allow 2a0b:f4c2:1::135;
+allow 2a0b:f4c2:1::137;
+allow 2a0b:f4c2:1::138;
+allow 2a0b:f4c2:1::139;
+allow 2a0b:f4c2:1::140;
+allow 2a0b:f4c2:1::141;
+allow 2a0b:f4c2:1::142;
+allow 2a0b:f4c2:1::143;
+allow 2a0b:f4c2:1::144;
+allow 2a0b:f4c2:1::145;
+allow 2a0b:f4c2:1::146;
+allow 2a0b:f4c2:1::147;
+allow 2a0b:f4c2:1::148;
+allow 2a0b:f4c2:1::149;
+allow 2a0b:f4c2:1::150;
+allow 2a0b:f4c2:1::151;
+allow 2a0b:f4c2:1::152;
+allow 2a0b:f4c2:1::153;
+allow 2a0b:f4c2:1::154;
+allow 2a0b:f4c2:1::155;
+allow 2a0b:f4c2:1::156;
+allow 2a0b:f4c2:1::157;
+allow 2a0b:f4c2:1::158;
+allow 2a0b:f4c2:1::160;
+allow 2a0b:f4c2:1::161;
+allow 2a0b:f4c2:1::162;
+allow 2a0b:f4c2:1::163;
+allow 2a0b:f4c2:1::164;
+allow 2a0b:f4c2:1::165;
+allow 2a0b:f4c2:1::166;
+allow 2a0b:f4c2:1::167;
+allow 2a0b:f4c2:1::168;
+allow 2a0b:f4c2:1::169;
+allow 2a0b:f4c2:1::170;
+allow 2a0b:f4c2:1::171;
+allow 2a0b:f4c2:1::172;
+allow 2a0b:f4c2:1::173;
+allow 2a0b:f4c2:1::174;
+allow 2a0b:f4c2:1::175;
+allow 2a0b:f4c2:1::176;
+allow 2a0b:f4c2:1::178;
+allow 2a0b:f4c2:1::179;
+allow 2a0b:f4c2:1::180;
+allow 2a0b:f4c2:1::182;
+allow 2a0b:f4c2:1::183;
+allow 2a0b:f4c2:1::184;
+allow 2a0b:f4c2:1::185;
+allow 2a0b:f4c2:1::186;
+allow 2a0b:f4c2:1::187;
+allow 2a0b:f4c2:1::188;
+allow 2a0b:f4c2:1::189;
+allow 2a0b:f4c2:1::190;
+allow 2a0b:f4c2:1::191;
 allow 2a0b:f4c2:2::32;
 allow 2a0b:f4c2:2::33;
 allow 2a0b:f4c2:2::34;
@@ -1463,7 +1581,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1487,6 +1604,7 @@ allow 38.135.24.32;
 allow 38.135.24.33;
 allow 38.135.24.72;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1708,6 +1826,8 @@ allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.86;
 allow 82.221.139.190;
+allow 82.29.128.140;
+allow 82.29.128.145;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
@@ -1763,7 +1883,6 @@ allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.92.109.126;
 allow 91.92.109.43;
-allow 92.113.144.149;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.113.25.239;
