--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -324,6 +324,66 @@ deny 185.220.101.107;
 deny 185.220.101.108;
 deny 185.220.101.109;
 deny 185.220.101.110;
+deny 185.220.101.129;
+deny 185.220.101.130;
+deny 185.220.101.131;
+deny 185.220.101.132;
+deny 185.220.101.133;
+deny 185.220.101.134;
+deny 185.220.101.135;
+deny 185.220.101.136;
+deny 185.220.101.137;
+deny 185.220.101.138;
+deny 185.220.101.139;
+deny 185.220.101.140;
+deny 185.220.101.141;
+deny 185.220.101.142;
+deny 185.220.101.143;
+deny 185.220.101.144;
+deny 185.220.101.145;
+deny 185.220.101.146;
+deny 185.220.101.147;
+deny 185.220.101.148;
+deny 185.220.101.149;
+deny 185.220.101.150;
+deny 185.220.101.151;
+deny 185.220.101.152;
+deny 185.220.101.153;
+deny 185.220.101.154;
+deny 185.220.101.155;
+deny 185.220.101.156;
+deny 185.220.101.157;
+deny 185.220.101.158;
+deny 185.220.101.160;
+deny 185.220.101.161;
+deny 185.220.101.162;
+deny 185.220.101.163;
+deny 185.220.101.164;
+deny 185.220.101.165;
+deny 185.220.101.166;
+deny 185.220.101.167;
+deny 185.220.101.168;
+deny 185.220.101.169;
+deny 185.220.101.170;
+deny 185.220.101.171;
+deny 185.220.101.172;
+deny 185.220.101.173;
+deny 185.220.101.174;
+deny 185.220.101.175;
+deny 185.220.101.176;
+deny 185.220.101.178;
+deny 185.220.101.179;
+deny 185.220.101.180;
+deny 185.220.101.182;
+deny 185.220.101.183;
+deny 185.220.101.184;
+deny 185.220.101.185;
+deny 185.220.101.186;
+deny 185.220.101.187;
+deny 185.220.101.188;
+deny 185.220.101.189;
+deny 185.220.101.190;
+deny 185.220.101.191;
 deny 185.220.101.32;
 deny 185.220.101.33;
 deny 185.220.101.34;
@@ -1250,6 +1310,64 @@ deny 2a0b:f4c0:16c:6::1;
 deny 2a0b:f4c0:16c:7::1;
 deny 2a0b:f4c0:16c:8::1;
 deny 2a0b:f4c0:16c:9::1;
+deny 2a0b:f4c2:1::129;
+deny 2a0b:f4c2:1::130;
+deny 2a0b:f4c2:1::132;
+deny 2a0b:f4c2:1::133;
+deny 2a0b:f4c2:1::134;
+deny 2a0b:f4c2:1::135;
+deny 2a0b:f4c2:1::137;
+deny 2a0b:f4c2:1::138;
+deny 2a0b:f4c2:1::139;
+deny 2a0b:f4c2:1::140;
+deny 2a0b:f4c2:1::141;
+deny 2a0b:f4c2:1::142;
+deny 2a0b:f4c2:1::143;
+deny 2a0b:f4c2:1::144;
+deny 2a0b:f4c2:1::145;
+deny 2a0b:f4c2:1::146;
+deny 2a0b:f4c2:1::147;
+deny 2a0b:f4c2:1::148;
+deny 2a0b:f4c2:1::149;
+deny 2a0b:f4c2:1::150;
+deny 2a0b:f4c2:1::151;
+deny 2a0b:f4c2:1::152;
+deny 2a0b:f4c2:1::153;
+deny 2a0b:f4c2:1::154;
+deny 2a0b:f4c2:1::155;
+deny 2a0b:f4c2:1::156;
+deny 2a0b:f4c2:1::157;
+deny 2a0b:f4c2:1::158;
+deny 2a0b:f4c2:1::160;
+deny 2a0b:f4c2:1::161;
+deny 2a0b:f4c2:1::162;
+deny 2a0b:f4c2:1::163;
+deny 2a0b:f4c2:1::164;
+deny 2a0b:f4c2:1::165;
+deny 2a0b:f4c2:1::166;
+deny 2a0b:f4c2:1::167;
+deny 2a0b:f4c2:1::168;
+deny 2a0b:f4c2:1::169;
+deny 2a0b:f4c2:1::170;
+deny 2a0b:f4c2:1::171;
+deny 2a0b:f4c2:1::172;
+deny 2a0b:f4c2:1::173;
+deny 2a0b:f4c2:1::174;
+deny 2a0b:f4c2:1::175;
+deny 2a0b:f4c2:1::176;
+deny 2a0b:f4c2:1::178;
+deny 2a0b:f4c2:1::179;
+deny 2a0b:f4c2:1::180;
+deny 2a0b:f4c2:1::182;
+deny 2a0b:f4c2:1::183;
+deny 2a0b:f4c2:1::184;
+deny 2a0b:f4c2:1::185;
+deny 2a0b:f4c2:1::186;
+deny 2a0b:f4c2:1::187;
+deny 2a0b:f4c2:1::188;
+deny 2a0b:f4c2:1::189;
+deny 2a0b:f4c2:1::190;
+deny 2a0b:f4c2:1::191;
 deny 2a0b:f4c2:2::32;
 deny 2a0b:f4c2:2::33;
 deny 2a0b:f4c2:2::34;
@@ -1463,7 +1581,6 @@ deny 2c0f:6c0:0:d::d28b;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.114.50.124;
@@ -1487,6 +1604,7 @@ deny 38.135.24.32;
 deny 38.135.24.33;
 deny 38.135.24.72;
 deny 38.135.25.2;
+deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1708,6 +1826,8 @@ deny 82.221.128.191;
 deny 82.221.131.5;
 deny 82.221.131.86;
 deny 82.221.139.190;
+deny 82.29.128.140;
+deny 82.29.128.145;
 deny 83.217.9.73;
 deny 83.228.94.69;
 deny 83.96.213.63;
@@ -1763,7 +1883,6 @@ deny 91.219.236.101;
 deny 91.219.236.91;
 deny 91.92.109.126;
 deny 91.92.109.43;
-deny 92.113.144.149;
 deny 92.243.24.163;
 deny 92.246.84.133;
 deny 93.113.25.239;
