--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -324,6 +324,66 @@ set_real_ip_from 185.220.101.107;
 set_real_ip_from 185.220.101.108;
 set_real_ip_from 185.220.101.109;
 set_real_ip_from 185.220.101.110;
+set_real_ip_from 185.220.101.129;
+set_real_ip_from 185.220.101.130;
+set_real_ip_from 185.220.101.131;
+set_real_ip_from 185.220.101.132;
+set_real_ip_from 185.220.101.133;
+set_real_ip_from 185.220.101.134;
+set_real_ip_from 185.220.101.135;
+set_real_ip_from 185.220.101.136;
+set_real_ip_from 185.220.101.137;
+set_real_ip_from 185.220.101.138;
+set_real_ip_from 185.220.101.139;
+set_real_ip_from 185.220.101.140;
+set_real_ip_from 185.220.101.141;
+set_real_ip_from 185.220.101.142;
+set_real_ip_from 185.220.101.143;
+set_real_ip_from 185.220.101.144;
+set_real_ip_from 185.220.101.145;
+set_real_ip_from 185.220.101.146;
+set_real_ip_from 185.220.101.147;
+set_real_ip_from 185.220.101.148;
+set_real_ip_from 185.220.101.149;
+set_real_ip_from 185.220.101.150;
+set_real_ip_from 185.220.101.151;
+set_real_ip_from 185.220.101.152;
+set_real_ip_from 185.220.101.153;
+set_real_ip_from 185.220.101.154;
+set_real_ip_from 185.220.101.155;
+set_real_ip_from 185.220.101.156;
+set_real_ip_from 185.220.101.157;
+set_real_ip_from 185.220.101.158;
+set_real_ip_from 185.220.101.160;
+set_real_ip_from 185.220.101.161;
+set_real_ip_from 185.220.101.162;
+set_real_ip_from 185.220.101.163;
+set_real_ip_from 185.220.101.164;
+set_real_ip_from 185.220.101.165;
+set_real_ip_from 185.220.101.166;
+set_real_ip_from 185.220.101.167;
+set_real_ip_from 185.220.101.168;
+set_real_ip_from 185.220.101.169;
+set_real_ip_from 185.220.101.170;
+set_real_ip_from 185.220.101.171;
+set_real_ip_from 185.220.101.172;
+set_real_ip_from 185.220.101.173;
+set_real_ip_from 185.220.101.174;
+set_real_ip_from 185.220.101.175;
+set_real_ip_from 185.220.101.176;
+set_real_ip_from 185.220.101.178;
+set_real_ip_from 185.220.101.179;
+set_real_ip_from 185.220.101.180;
+set_real_ip_from 185.220.101.182;
+set_real_ip_from 185.220.101.183;
+set_real_ip_from 185.220.101.184;
+set_real_ip_from 185.220.101.185;
+set_real_ip_from 185.220.101.186;
+set_real_ip_from 185.220.101.187;
+set_real_ip_from 185.220.101.188;
+set_real_ip_from 185.220.101.189;
+set_real_ip_from 185.220.101.190;
+set_real_ip_from 185.220.101.191;
 set_real_ip_from 185.220.101.32;
 set_real_ip_from 185.220.101.33;
 set_real_ip_from 185.220.101.34;
@@ -1250,6 +1310,64 @@ set_real_ip_from 2a0b:f4c0:16c:6::1;
 set_real_ip_from 2a0b:f4c0:16c:7::1;
 set_real_ip_from 2a0b:f4c0:16c:8::1;
 set_real_ip_from 2a0b:f4c0:16c:9::1;
+set_real_ip_from 2a0b:f4c2:1::129;
+set_real_ip_from 2a0b:f4c2:1::130;
+set_real_ip_from 2a0b:f4c2:1::132;
+set_real_ip_from 2a0b:f4c2:1::133;
+set_real_ip_from 2a0b:f4c2:1::134;
+set_real_ip_from 2a0b:f4c2:1::135;
+set_real_ip_from 2a0b:f4c2:1::137;
+set_real_ip_from 2a0b:f4c2:1::138;
+set_real_ip_from 2a0b:f4c2:1::139;
+set_real_ip_from 2a0b:f4c2:1::140;
+set_real_ip_from 2a0b:f4c2:1::141;
+set_real_ip_from 2a0b:f4c2:1::142;
+set_real_ip_from 2a0b:f4c2:1::143;
+set_real_ip_from 2a0b:f4c2:1::144;
+set_real_ip_from 2a0b:f4c2:1::145;
+set_real_ip_from 2a0b:f4c2:1::146;
+set_real_ip_from 2a0b:f4c2:1::147;
+set_real_ip_from 2a0b:f4c2:1::148;
+set_real_ip_from 2a0b:f4c2:1::149;
+set_real_ip_from 2a0b:f4c2:1::150;
+set_real_ip_from 2a0b:f4c2:1::151;
+set_real_ip_from 2a0b:f4c2:1::152;
+set_real_ip_from 2a0b:f4c2:1::153;
+set_real_ip_from 2a0b:f4c2:1::154;
+set_real_ip_from 2a0b:f4c2:1::155;
+set_real_ip_from 2a0b:f4c2:1::156;
+set_real_ip_from 2a0b:f4c2:1::157;
+set_real_ip_from 2a0b:f4c2:1::158;
+set_real_ip_from 2a0b:f4c2:1::160;
+set_real_ip_from 2a0b:f4c2:1::161;
+set_real_ip_from 2a0b:f4c2:1::162;
+set_real_ip_from 2a0b:f4c2:1::163;
+set_real_ip_from 2a0b:f4c2:1::164;
+set_real_ip_from 2a0b:f4c2:1::165;
+set_real_ip_from 2a0b:f4c2:1::166;
+set_real_ip_from 2a0b:f4c2:1::167;
+set_real_ip_from 2a0b:f4c2:1::168;
+set_real_ip_from 2a0b:f4c2:1::169;
+set_real_ip_from 2a0b:f4c2:1::170;
+set_real_ip_from 2a0b:f4c2:1::171;
+set_real_ip_from 2a0b:f4c2:1::172;
+set_real_ip_from 2a0b:f4c2:1::173;
+set_real_ip_from 2a0b:f4c2:1::174;
+set_real_ip_from 2a0b:f4c2:1::175;
+set_real_ip_from 2a0b:f4c2:1::176;
+set_real_ip_from 2a0b:f4c2:1::178;
+set_real_ip_from 2a0b:f4c2:1::179;
+set_real_ip_from 2a0b:f4c2:1::180;
+set_real_ip_from 2a0b:f4c2:1::182;
+set_real_ip_from 2a0b:f4c2:1::183;
+set_real_ip_from 2a0b:f4c2:1::184;
+set_real_ip_from 2a0b:f4c2:1::185;
+set_real_ip_from 2a0b:f4c2:1::186;
+set_real_ip_from 2a0b:f4c2:1::187;
+set_real_ip_from 2a0b:f4c2:1::188;
+set_real_ip_from 2a0b:f4c2:1::189;
+set_real_ip_from 2a0b:f4c2:1::190;
+set_real_ip_from 2a0b:f4c2:1::191;
 set_real_ip_from 2a0b:f4c2:2::32;
 set_real_ip_from 2a0b:f4c2:2::33;
 set_real_ip_from 2a0b:f4c2:2::34;
@@ -1463,7 +1581,6 @@ set_real_ip_from 2c0f:6c0:0:d::d28b;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
@@ -1487,6 +1604,7 @@ set_real_ip_from 38.135.24.32;
 set_real_ip_from 38.135.24.33;
 set_real_ip_from 38.135.24.72;
 set_real_ip_from 38.135.25.2;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1708,6 +1826,8 @@ set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
+set_real_ip_from 82.29.128.140;
+set_real_ip_from 82.29.128.145;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.228.94.69;
 set_real_ip_from 83.96.213.63;
@@ -1763,7 +1883,6 @@ set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
-set_real_ip_from 92.113.144.149;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.113.25.239;
