--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -113,7 +113,6 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
-allow 114.172.205.8;
 allow 114.35.245.150;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -1476,6 +1475,7 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1505,7 +1505,6 @@ allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:1467::;
-allow 2a12:6fc2:8000::1b1;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
@@ -1520,6 +1519,7 @@ allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:35;
 allow 2a12:a800:1:1:2:58:56:43;
 allow 2a12:a800:1:1:2:58:56:93;
+allow 2a12:a800:1:1:45:154:98:33;
 allow 2a12:a800:2:1:185:241:208:115;
 allow 2a12:a800:2:1:185:241:208:185;
 allow 2a12:a800:2:1:185:241:208:202;
@@ -1653,6 +1653,7 @@ allow 45.141.215.97;
 allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.153.34.246;
+allow 45.154.98.33;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1835,7 +1836,6 @@ allow 84.211.226.13;
 allow 84.239.46.144;
 allow 85.239.41.130;
 allow 85.239.55.132;
-allow 85.90.196.162;
 allow 85.93.218.204;
 allow 86.54.25.3;
 allow 86.54.28.49;
@@ -1886,6 +1886,7 @@ allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
