Update lists at 20250710-0001

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 100.42.28.67;
 allow 100.42.28.68;
 allow 100.42.28.69;
 allow 100.42.28.70;
+allow 101.99.92.179;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -47,6 +48,7 @@ allow 104.244.79.61;
 allow 104.254.90.243;
 allow 107.174.146.25;
 allow 107.189.10.175;
+allow 107.189.10.217;
 allow 107.189.1.111;
 allow 107.189.11.111;
 allow 107.189.1.160;
@@ -114,6 +116,7 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
+allow 114.172.205.8;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 118.193.64.139;
@@ -143,6 +146,7 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
+allow 141.11.164.4;
 allow 142.44.133.81;
 allow 144.126.133.74;
 allow 144.172.84.103;
@@ -289,11 +293,11 @@ allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.171.84;
+allow 185.168.194.63;
 allow 185.170.114.25;
 allow 185.177.151.34;
 allow 185.183.157.214;
 allow 185.183.159.40;
-allow 185.183.192.147;
 allow 185.191.204.254;
 allow 185.193.52.180;
 allow 185.195.71.244;
@@ -474,6 +478,7 @@ allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
+allow 185.7.78.70;
 allow 185.82.219.109;
 allow 188.214.104.21;
 allow 188.239.191.25;
@@ -481,6 +486,7 @@ allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
+allow 188.68.52.247;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -619,6 +625,7 @@ allow 199.195.253.180;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b40:5700:983c::1;
 allow 2001:1b60:2:1:3935:104:0:1;
+allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:221:701:102:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
@@ -858,6 +865,7 @@ allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 213.232.235.104;
+allow 216.227.168.204;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
@@ -1199,6 +1207,7 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:4780:2d:9877::1;
 allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
@@ -1229,6 +1238,7 @@ allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:4000:6:e170:747a:eaff:fe66:37c7;
 allow 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
@@ -1477,6 +1487,7 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1574,13 +1585,13 @@ allow 2a12:a800:9:1:193:26:115:43;
 allow 2a12:a800:9:1:193:26:115:61;
 allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
-allow 2a12:de40:21:1be4::;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
 allow 31.44.238.25;
+allow 31.97.99.5;
 allow 35.0.127.52;
 allow 37.114.50.124;
 allow 37.114.50.142;
@@ -1828,6 +1839,7 @@ allow 82.29.128.140;
 allow 82.29.128.145;
 allow 82.68.49.227;
 allow 83.147.17.190;
+allow 83.217.208.30;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
@@ -1844,11 +1856,11 @@ allow 86.54.28.49;
 allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.12;
+allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
 allow 87.120.93.182;
-allow 88.151.194.24;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
@@ -1887,6 +1899,7 @@ allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
