--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,6 +1,7 @@
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b40:5700:983c::1;
 deny 2001:1b60:2:1:3935:104:0:1;
+deny 2001:1b60:3:221:3132:102:0:1;
 deny 2001:1b60:3:221:4134:101:0:1;
 deny 2001:1b60:3:221:701:102:0:1;
 deny 2001:1b60:3:239:1003:103:0:1;
@@ -371,6 +372,7 @@ deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
+deny 2a02:4780:2d:9877::1;
 deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
@@ -401,6 +403,7 @@ deny 2a03:4000:6:614:d803:40ff:fec3:832a;
 deny 2a03:4000:66:15:18a0:6bff:fe90:3147;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+deny 2a03:4000:6:e170:747a:eaff:fe66:37c7;
 deny 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
@@ -649,6 +652,7 @@ deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
+deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
@@ -746,6 +750,5 @@ deny 2a12:a800:9:1:193:26:115:43;
 deny 2a12:a800:9:1:193:26:115:61;
 deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
-deny 2a12:de40:21:1be4::;
 deny 2c0f:6c0:0:2::6983;
 deny 2c0f:6c0:0:d::d28b;
