--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -223,7 +223,6 @@ deny 176.65.149.87;
 deny 176.65.149.88;
 deny 176.65.149.96;
 deny 176.97.114.202;
-deny 177.149.157.160;
 deny 177.153.51.238;
 deny 177.93.140.66;
 deny 178.17.170.144;
@@ -298,6 +297,7 @@ deny 185.170.114.25;
 deny 185.177.151.34;
 deny 185.183.157.214;
 deny 185.183.159.40;
+deny 185.183.192.147;
 deny 185.191.204.254;
 deny 185.193.52.180;
 deny 185.195.71.244;
@@ -900,7 +900,7 @@ deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.244;
 deny 23.151.8.8;
-deny 23.155.8.104;
+deny 23.184.48.13;
 deny 23.184.48.78;
 deny 23.191.200.10;
 deny 23.191.200.11;
@@ -958,7 +958,6 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
-deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
@@ -1261,6 +1260,7 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1590,6 +1590,7 @@ deny 2c0f:6c0:0:d::d28b;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
+deny 31.220.75.237;
 deny 31.44.238.25;
 deny 31.97.99.5;
 deny 35.0.127.52;
@@ -1614,7 +1615,6 @@ deny 38.135.24.32;
 deny 38.135.24.33;
 deny 38.135.24.72;
 deny 38.135.25.2;
-deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1741,6 +1741,7 @@ deny 46.250.243.29;
 deny 46.30.188.218;
 deny 46.38.243.210;
 deny 46.8.43.110;
+deny 47.153.190.249;
 deny 5.101.82.22;
 deny 5.104.84.183;
 deny 5.104.86.6;
@@ -1754,6 +1755,7 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
